--- a/src/pages/Promotion/Discount/Discount.module.scss
+++ b/src/pages/Promotion/Discount/Discount.module.scss
@@ -200,7 +200,8 @@
             border-radius: 8px;
             background: var(--Main2);
             color: #fff;
-            width:100%;
+            width:40%;
+            margin: 6px;
         }
     }
     
