--- a/src/pages/Promotion/Coupons/Coupons.module.scss
+++ b/src/pages/Promotion/Coupons/Coupons.module.scss
@@ -210,11 +210,61 @@
     text-align: center;
 }
 
+
+.tabsSection {
+
+    :global(.nav-tabs) {
+        border: none;
+
+        :global(.nav-item) {
+            width: 25%;
+            text-align: center;
+
+            :global(.nav-link) {
+                width: 100%;
+                background: #CCE0FE;
+                border-radius: 0px;
+                color: #AAAAAA;
+                padding: 20px 20px;
+                border: none;
+
+                &:global(.active) {
+                    background-color: #AACBFE;
+                    color: #000;
+                }
+            }
+
+        }
+    }
+}
+
+
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
 
+         
+.tabsSection {
+
+    :global(.nav-tabs) {
+
+        :global(.nav-item) {
+            margin-bottom: 5px;
+
+            :global(.nav-link) {
+                padding: 12px 20px;
+                min-width: 100px;
+
+                &:global(.active) {
+                    background-color: var(--Main2);
+                    color: #fff;
+                }
+            }
+
+        }
+    }
+}
    
     .ctsPopup {
 
