--- a/src/pages/Reports/MyReports/MyReports.module.scss
+++ b/src/pages/Reports/MyReports/MyReports.module.scss
@@ -35,6 +35,27 @@
        }
     }
 }
+
+.action {
+
+    .actionIcon {
+        margin-right:20px;
+        cursor: pointer;
+    }
+}
+.date {
+
+    h6 {
+        font-size:15px;
+        font-weight:500;
+        margin-bottom:0;
+    }
+    p {
+        font-size:14px;
+        color:#909090;
+        margin:0;
+    }
+}
 .date {
 
     h5 {
@@ -56,10 +77,7 @@
     }
 }
 
-.checkboxRow {
- 
 
-}
 .checkbox {
 	position: relative;
 	cursor: pointer;
@@ -206,6 +224,38 @@
     }
 }
 
+.formBox {
+    margin-bottom: 15px;
+
+    :global(.form-label) {
+        margin: 0;
+        font-size: 18px;
+        font-weight: 500;
+    }
+    :global(.form-control) {
+        border: 1px solid #d7d7d7;
+        border-radius: 8px;
+        padding: 10px 12px;
+
+        &:focus {
+            box-shadow:none;
+            border-color:var(--Main2);
+        }
+    }
+    :global(.form-select) {
+        border: 1px solid #d7d7d7;
+        border-radius: 8px;
+        padding: 10px 12px;
+
+        &:focus {
+            box-shadow:none;
+            border-color:var(--Main2);
+        }
+    }
+}
+
+
+
 .importBody {
 
     :global(.modal-header) {
@@ -236,25 +286,35 @@
             border-radius: 8px;
             background: var(--Main2);
             color: #fff;
-            width:40%;
-            margin:3px;
+            width:100%;
         }
     }
     
 }
+.tabsSection {
 
-.pinBox {
+    :global(.nav-tabs) {
+        border: none;
 
-    :global(.form-control) {
-        border-radius:8px !important;
-    }
+        :global(.nav-item) {
+            width: 25%;
+            text-align: center;
 
-    .generateBtn {
-        background: var(--Main2);
-        min-width: 100px;
-        border-radius: 8px !important;
-        color: #fff;
-        margin-left: 10px !important;
+            :global(.nav-link) {
+                width: 100%;
+                background: #CCE0FE;
+                border-radius: 0px;
+                color: #AAAAAA;
+                padding: 20px 20px;
+                border: none;
+
+                &:global(.active) {
+                    background-color: #AACBFE;
+                    color: #000;
+                }
+            }
+
+        }
     }
 }
 
@@ -262,6 +322,26 @@
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
 @media (max-width: 767px) {
+    .tabsSection {
+
+        :global(.nav-tabs) {
+    
+            :global(.nav-item) {
+                margin-bottom: 5px;
+    
+                :global(.nav-link) {
+                    padding: 12px 20px;
+                    min-width: 100px;
+    
+                    &:global(.active) {
+                        background-color: var(--Main2);
+                        color: #fff;
+                    }
+                }
+    
+            }
+        }
+    }
 
    
     .ctsPopup {
@@ -279,7 +359,6 @@
                         }
                     }
                 }
-                
                 
                 
                 :global(.modal-footer) {
