--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -156,3 +156,148 @@
         }
     }
 }
+
+
+
+
+
+
+/*=======================================================
+//////////////RESPONSIVE MEDIA QUERY START///////////////
+=======================================================*/
+@media (max-width: 767px) {
+    .mainHeader {
+        margin-left:0px;
+        padding: 0px 0px;
+        margin-top: 56px;
+
+        .headerMobile {
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0px;
+            background: var(--Main);
+            padding: 15px 15px;
+            z-index: 99;
+            transition: 0.5s;
+            opacity: 0;
+
+            &.show {
+                top: 56px;
+                opacity: 1;
+                box-shadow: 0 5px 5px -4px #a6a6a6;
+            }
+        }
+
+        .headerRight {
+
+            ul {
+    
+                li {
+                    margin-left: 20px;
+                }
+            }
+        }
+
+        .mobileHeader {
+            background-color: #fff;
+            padding: 15px 15px 15px 15px;
+            color:var(--Color);
+            margin: 0;
+            align-items: center;
+            position: fixed;
+            left: 0;
+            width: 100%;
+            top: 0;
+            z-index: 99;
+            display: flex;
+
+            .navlogo {
+
+                .logoIcon {
+                    height: 30px;
+                }
+            }
+            .hembugmenu {
+                font-size:20px;
+            }
+            .moreMenu {
+                text-align: right;
+
+                .moreIcon {
+                    font-size: 20px;
+                    cursor: pointer;
+                }
+            }
+            
+        }
+        
+    }.mainHeader {
+        margin-left:0px;
+        padding: 0px 0px;
+        margin-top: 56px;
+
+        .headerMobile {
+            display: none;
+            position: fixed;
+            top: 80px;
+            left: 0px;
+            background: var(--Main);
+            padding: 15px 15px;
+            z-index: 99;
+            transition: 0.5s;
+            opacity: 0;
+
+            &.show {
+                top: 56px;
+                opacity: 1;
+                box-shadow: 0 5px 5px -4px #a6a6a6;
+            }
+        }
+
+        .headerRight {
+
+            ul {
+    
+                li {
+                    margin-left: 20px;
+                }
+            }
+        }
+
+        .mobileHeader {
+            background-color: #fff;
+            padding: 15px 15px 15px 15px;
+            color:var(--Color);
+            margin: 0;
+            align-items: center;
+            position: fixed;
+            left: 0;
+            width: 100%;
+            top: 0;
+            z-index: 99;
+            display: flex;
+
+            .navlogo {
+
+                .logoIcon {
+                    height: 30px;
+                }
+            }
+            .hembugmenu {
+                font-size:20px;
+            }
+            .moreMenu {
+                text-align: right;
+
+                .moreIcon {
+                    font-size: 20px;
+                    cursor: pointer;
+                }
+            }
+            
+        }
+        
+    }
+
+}
