--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -239,3 +239,41 @@
         }
     }
 }
+
+
+
+/*=======================================================
+//////////////RESPONSIVE MEDIA QUERY START///////////////
+=======================================================*/
+@media (max-width: 767px) {
+
+    .sidebarBody {
+        
+        .sidebarMain {
+            left: -250px;
+            transition:0.5s;
+            z-index:9999;
+        }
+        
+        .hideBg {
+            width: 100%;
+            position: fixed;
+            left: -100%;
+            background: rgba(0, 0, 0, 0.3);
+            height: 100%;
+            top: 0;
+            z-index: 99;
+        }
+        
+        &.show {
+
+            .sidebarMain {
+                left: 0px;
+            }
+            
+            .hideBg {
+                left: 0%;
+            }
+        }
+    }
+}
