--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -1,18 +1,31 @@
 @import "variables.module.scss"; 
 
 body {
-  background-color: var(--BodyBackground);
+  background-color: var(--BodyBackground) !important;
   margin: 0;
   padding: 0;
   font-size: 16px;
   color: #222;
   width: 100%;
   height: 100%;
-  font-family: 'Inter';
+  font-family:'Inter' !important;
   overflow-x: hidden;
   font-weight: normal;
   font-style: normal;
   letter-spacing: -0.5px;
+}
+
+img {
+  display:inline-block !important;
+}
+
+.calendarDropdown {
+
+
+  :global(.dropdown-menu) {
+    padding: 0px 0px !important;
+    overflow: hidden;
+  }
 }
 
 
@@ -20,129 +33,176 @@ body {
   margin-left: 250px;
 
   .pageTitle {
-    position: sticky;
     z-index: 99;
     background: #fff;
-    top: 0;
     margin: 0;
     padding: 35px 35px;
+    display:flex;
+    justify-content: space-between;
 
-    h5 {
-        font-size: 30px;
-        font-weight: 300;
-        margin-bottom: 0px;
-        color: #4D4D4D;
+    .rowTitleLeft {
 
-        .back {
-            color: var(--Main2);
-            text-decoration: none;
-            margin-right: 20px;
-        }
+        h5 {
+          font-size: 30px;
+          font-weight: 300;
+          margin-bottom: 0px;
+          color: #4D4D4D;
 
+          .back {
+              color: var(--Main2);
+              text-decoration: none;
+              margin-right: 20px;
+          }
+       }
     }
+    
+    .rowTitleRight {
+      display:flex;
 
-    .rowTitle {
+        .selectDropdown {
+          display: inline-block;
 
-        .rowTitleRight {
-            text-align: right;
+          :global(.multi-select) {
 
-            .selectDropdown {
-              display: inline-block;
-
-              :global(.multi-select) {
-
-                :global(.dropdown-container) {
-                    background-color: #fff;
-                    border-color: #B3B3B3;
-                    color: #B3B3B3;
-                    border-radius: 50px;
-
-                    :global(.dropdown-heading-value) {
-                      width: 100px;
-                      text-align: left;
-                      overflow: hidden;
-                      -o-text-overflow: ellipsis;
-                      text-overflow: ellipsis;
-                      display: -webkit-box;
-                      -webkit-line-clamp: 1;
-                      -webkit-box-orient: vertical;
-                      white-space: break-spaces;
-                      word-break: break-all;
-                      font-size: 14px;
-
-                      span {
-                        display: block;
-                      }
-                    }
-
-                    :global(.clear-selected-button) {
-                      display:none;
-                    }
-                }
-
-              }
-
-
-              :global(.css-1s2u09g-control), :global(.css-1pahdxg-control) {
-                border: 1px solid #B3B3B3;
-                padding: 0px 15px;
-                border-radius: 50px;
-
-                &:hover, &:focus {
-                  border: 1px solid #B3B3B3;
-                  box-shadow: none;
-                }
-
-                :global(.css-1okebmr-indicatorSeparator) {
-                  display: none;
-                }
-
-                :global(.css-tlfecz-indicatorContainer), :global(.css-1gtu0rj-indicatorContainer) {
-                  padding: 0px 0px;
-                }
-              }
-
-            }
-
-            :global(.btn) {
+            :global(.dropdown-container) {
                 background-color: #fff;
                 border-color: #B3B3B3;
                 color: #B3B3B3;
                 border-radius: 50px;
-                min-width: 80px;
-                padding: 8px 15px;
-                margin-left: 10px;    
-                font-weight: normal;
-                font-size: 14px;
 
-                .icon {
-                    margin-right: 5px;
-                    margin-top: -1px;
+                :global(.dropdown-heading-value) {
+                  width: 100px;
+                  text-align: left;
+                  overflow: hidden;
+                  -o-text-overflow: ellipsis;
+                  text-overflow: ellipsis;
+                  display: -webkit-box;
+                  -webkit-line-clamp: 1;
+                  -webkit-box-orient: vertical;
+                  white-space: break-spaces;
+                  word-break: break-all;
+                  font-size: 14px;
+
+                  span {
+                    display: block;
+                  }
                 }
 
-                &:focus {
-                    box-shadow: none;
+                :global(.clear-selected-button) {
+                  display:none;
                 }
             }
 
-            :global(.dropdown) {
-                display: inline-block;
+            :global(.dropdown-content) {
+              z-index: 99;
 
-                :global(.dropdown-menu) {
-                    padding: 0px 0px;
+              :global(.panel-content) {
+                padding: 10px 10px;
+                border-radius: 10px;
+                width: 190px;
+
+                :global(.search) {
+                   border:none;
+
+                  input {
+                    background: #fff;
+                    border: 1px solid #dbdbdb;
                     border-radius: 8px;
-                    border-color: #d2cfcf;
-
-                    a {
-                        padding: 8px 10px;
-                        border-bottom: 1px solid #e4e4e4;
-
-                        &:last-child {
-                            border: none;
-                        }
-                    }
+                  }
                 }
+                :global(.options) {
 
+                  :global(.select-item)  {
+                    padding: 4px 0px;
+                    font-weight: normal;
+                    color: #222;
+                    background: #fff !important;
+
+                    input {
+                      width: 15px;
+                      height: 15px;
+                      position: relative;
+                      top: 1px;
+                    }
+                  }
+
+                }
+              }
+            }
+
+          }
+
+
+          :global(.css-1s2u09g-control), :global(.css-1pahdxg-control) {
+            border: 1px solid #B3B3B3;
+            padding: 0px 15px;
+            border-radius: 50px;
+            box-shadow: none;
+
+            &:hover, &:focus {
+              border: 1px solid #B3B3B3;
+              box-shadow: none;
+            }
+
+            :global(.css-1okebmr-indicatorSeparator) {
+              display: none;
+            }
+
+            :global(.css-tlfecz-indicatorContainer), :global(.css-1gtu0rj-indicatorContainer) {
+              padding: 0px 0px;
+            }
+          }
+
+        }
+
+        :global(.btn) {
+            background-color: #fff;
+            border-color: #B3B3B3;
+            color: #B3B3B3;
+            border-radius: 50px;
+            min-width: 80px;
+            padding: 8px 15px;
+            margin-left: 10px;    
+            font-weight: normal;
+            font-size: 14px;
+            white-space: nowrap;
+
+            .icon {
+                margin-right: 5px;
+                margin-top: -1px;
+            }
+
+            &:focus {
+                box-shadow: none;
+            }
+        }
+
+        :global(.dropdown) {
+            display: inline-block;
+
+            :global(.dropdown-menu) {
+              padding: 10px 15px;
+              border-radius: 10px;
+              border: none;
+              box-shadow: 0 1px 5px 2px #0000001f;
+
+              ul {
+                list-style:none;
+                margin:0;
+                padding:0;
+
+                li {
+
+
+                  a {
+                    color:#4D4D4D;
+                    text-decoration: none;
+                    display:block;
+                    margin: 5px 0px
+                  }
+
+                }
+              }
             }
         }
     }
@@ -173,6 +233,50 @@ body {
 
 
 @media (max-width: 767px) {
+
+  .pageWrapper {
+    margin-left: 0px;
+  
+    .pageTitle {
+      padding: 20px 20px;
+      display:block;
+
+        .rowTitleLeft {
+          margin-bottom:20px;
+
+          h5 {
+            font-size: 30px;
+            font-weight: 300;
+            margin-bottom: 0px;
+            color: #4D4D4D;
+
+            .back {
+                color: var(--Main2);
+                text-decoration: none;
+                margin-right: 20px;
+            }
+        }
+      }
+      
+      .rowTitleRight {    
+        overflow-x: scroll;
+        display:flex;
+        padding-bottom: 10px;
+
+        :global(.btn) {
+          min-width: auto;
+        }
+      }
+      
+    }
+  
+    .pageWrapperInside {
+      padding:20px 20px;
+  
+    }
+  }
+  
+  
 
 }
 
