--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -27,12 +27,12 @@
 	}
 	.checkmark {
 		position: absolute;
-		top: 3px;
+		top: -1px;
 		left: 0;
 		height: 18px;
 		width: 18px;
 		background-color: #fff;
-		border-radius: 3px;
+		border-radius: 4px;
         border: 1px solid #d8d8d8;
 
 	    &:after {
@@ -163,6 +163,7 @@
                     min-width: 60px;
                     border-radius: 50px;
                     margin-right: 2px;
+                    border-color: transparent;
     
                     &:focus {
                         box-shadow: none;
@@ -261,17 +262,39 @@
     
                                li {
                                    margin: 0;
+
+                                   &:first-child {
+
+                                        label {
+                                            margin-top: 5px;
+                                        }
+                                   }
+                                   &:last-child {
+
+                                        label {
+                                            margin-bottom: 5px;
+                                        }
+                                   }
     
                                   label {
                                       display:block;
-                                      margin: 5px 0px;
+                                      margin: 10px 0px;
+                                      font-size: 12px;
     
                                       input[type="checkbox" i]:disabled  {
-                                        position: absolute;
-                                        left: 0;
-                                        width: 100%;
-                                        height: 100%;
                                         cursor: no-drop;
+                                      }
+
+                                      &.disabled {
+                                          color: #E5E5E5;
+
+                                        .checkmark {
+                                            background-color: #E5E5E5;
+                                            border: 1px solid #E5E5E5;
+
+                                            &:after {
+                                            }
+                                        }
                                       }
                                   }
                                }
@@ -280,6 +303,44 @@
                     }
                 }
                 
+            }
+        }
+    }
+}
+
+
+
+
+.tableCt {
+    margin: 0;
+
+    thead {
+
+        tr {
+
+            th {
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 150%;
+                color: #4D4D4D;
+                border-bottom: 1px solid #E5E5E5;
+                padding: 15px 10px;
+            }
+        }
+    }
+    tbody {
+
+        tr {
+
+            td {
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 150%;
+                color: #808080;
+                border-bottom: 1px solid #E5E5E5;
+                padding: 15px 10px;
             }
         }
     }
