--- a/src/style.module.scss
+++ b/src/style.module.scss
@@ -97,32 +97,44 @@ img {
               z-index: 99;
 
               :global(.panel-content) {
-                padding: 10px 10px;
+                padding:15px 15px;
                 border-radius: 10px;
-                width: 190px;
+                width: 229px;
 
                 :global(.search) {
                    border:none;
+                   margin-bottom: 5px;
 
                   input {
                     background: #fff;
                     border: 1px solid #dbdbdb;
-                    border-radius: 8px;
+                    border-radius: 50px;
+                    font-size: 12px;
+                    padding: 0px 15px;
                   }
                 }
                 :global(.options) {
 
                   :global(.select-item)  {
                     padding: 4px 0px;
-                    font-weight: normal;
-                    color: #222;
+                    font-weight: 400;
+                    color: #4D4D4D;
                     background: #fff !important;
 
-                    input {
-                      width: 15px;
-                      height: 15px;
+                    :global(.item-renderer) {
                       position: relative;
-                      top: 1px;
+                      align-items: center;
+                      
+                        input {
+                          width: 18px;
+                          height: 18px;
+                          position: relative;
+                          top: 1px;
+                          left: 2px;
+                          border: none;
+                          border-radius: 14px;
+                          margin-right: 10px;
+                        }
                     }
                   }
 
@@ -198,7 +210,8 @@ img {
                     color:#4D4D4D;
                     text-decoration: none;
                     display:block;
-                    margin: 5px 0px
+                    margin: 8px 0px;
+                    font-size:12px;
                   }
 
                 }
@@ -219,7 +232,8 @@ img {
       :global(.card-body) {
         padding:0px;
         margin-bottom: 0px;
-        background: #FAFAFA;
+        background: #fff;
+        border-radius: 15px;
       }
     }
   }
