--- a/src/pages/Navigation/Navigation.module.scss
+++ b/src/pages/Navigation/Navigation.module.scss
@@ -7,6 +7,14 @@
     border-right: 1px solid #e6e5e5;
 }
 
+.wrapperLogin {
+    height: 100vh;
+    max-width: 1920px;
+    margin: 0 auto;
+    background:#fff;
+    border-right: 1px solid #e6e5e5;
+}
+
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
