--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,5 +1,6 @@
 @import "../../variables.module.scss";
 
+
 .loginSection {
   font-family: "Inter", sans-serif;
   position: absolute;
@@ -47,10 +48,11 @@
         font-size: 22px;
         position: absolute;
         right: 0px;
-        top: 45%;
+        top: 52%;
         transform: translate(-50%, -50%);
         color: #5e5c5c;
         cursor: pointer;
+        line-height: 0px;
       }
     }
 
