--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -27,7 +27,7 @@
     z-index: 10;
     background: #fff;
     transition: .2s ease-in;
-    border-right:1px solid var(--BodyBackground);
+    border-right:1px solid #eeeeee;
 
     .logoBox {
         align-items: center;
