--- a/src/pages/Customerdetails/Customerdetails.module.scss
+++ b/src/pages/Customerdetails/Customerdetails.module.scss
@@ -62,6 +62,30 @@
     margin-bottom: 30px;
     background: #fff;
 
+    &.countCardBox {
+        padding: 30px 25px;
+
+        p {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            color: #808080;
+            margin-bottom: 12px;
+        }
+        h3 {
+            margin: 0;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 24px;
+            color: #4D4D4D;
+            line-height: 2rem;
+
+            a {
+                text-decoration: none;
+            }
+        }
+    }
+
     .tagsList {
         list-style: none;
         margin: 0;
