--- a/src/components/Modals/Modals.module.scss
+++ b/src/components/Modals/Modals.module.scss
@@ -137,6 +137,13 @@
             
             :global(.modal-footer) {
                 padding: 20px 20px;
+                justify-content: space-between;
+
+                .rightOption {
+                    color:#BCBCBC;
+                    text-decoration: none;
+                    font-size: 14px;
+                }
 
                 :global(.btn) {
                     min-width: 100px;
