--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -411,6 +411,16 @@
 }
 
 
+.deleteIcon {
+    color: #ee5253;
+    font-size: 23px;
+    cursor: pointer;
+
+    svg {
+
+    }
+}
+
 /*=======================================================
 //////////////RESPONSIVE MEDIA QUERY START///////////////
 =======================================================*/
