--- a/src/components/Modals/Modals.module.scss
+++ b/src/components/Modals/Modals.module.scss
@@ -25,6 +25,14 @@
     }
   }
 
+.rightLabel {
+    text-decoration: none;
+    font-size: 16px;
+    float: right;
+    color: var(--Main2);
+
+}
+
 .formField {
     margin-bottom:20px;
 
@@ -174,6 +182,13 @@
     
     :global(.modal-dialog) {
         max-width:600px;
+        transition: all .2s ease !important;
+    }
+    .ctsModalSize {
+
+        :global(.modal-dialog) {
+            max-width:1126px;
+        }
     }
 
 }
