--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -128,6 +128,7 @@
         display: flex;
         justify-content: end;
         padding: 10px 10px !important;
+        border: none;
     }
     :global(.MuiToolbar-root) {
         padding:0px 0px !important;
