--- a/src/datatable.module.scss
+++ b/src/datatable.module.scss
@@ -4,6 +4,9 @@
     position: static;
     top: 0;
 }
+.noData {
+    color:#B3B3B3;
+}
 .actionCheckbox {
     display: flex;
     align-items: center;
