--- a/src/pages/Inventorymore/Inventorymore.module.scss
+++ b/src/pages/Inventorymore/Inventorymore.module.scss
@@ -55,52 +55,22 @@
     }
   }
 
-.contentBox {
+.moreOption {
     border-radius: 15px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
-    padding: 25px 25px;
+    padding:30px 20px;
     margin-bottom: 30px;
     background: #fff;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+    color: var(--Color);
+    transition: 0.1s;
 
-    .tagsList {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-
-        li {
-            display: inline-block;
-            margin-right: 10px;
-            margin-bottom: 10px;
-
-            span {
-                display: block;
-                border: 1px solid var(--Main2);
-                padding: 5px 15px;
-                border-radius: 8px;
-            }
-        }
-    }
-}
-
-
-.formField {
-    margin-bottom: 15px;
-
-    label {
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #808080;
-    }
-    p {
-        font-style: normal;
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 150%;
-        margin: 0px;
-        border-bottom: 2px solid #E9E9E9;
-        padding:6px 0px 8px 0px;
+    &:hover {
+        box-shadow: 1px 5px 10px #99a2ac80;
+        color: var(--Main2);
     }
 }
 
