--- a/src/pages/Quantityadjustmentdetails/Quantityadjustmentdetails.module.scss
+++ b/src/pages/Quantityadjustmentdetails/Quantityadjustmentdetails.module.scss
@@ -54,6 +54,15 @@
 
     }
   }
+  .rowTitleIcons{
+    
+    button{
+        svg{
+            margin-right: 8px;
+            font-size: 18px;
+        }
+    }
+  }
 
 .contentBox {
     border-radius: 15px;
@@ -61,6 +70,30 @@
     padding: 25px 25px;
     margin-bottom: 30px;
     background: #fff;
+
+    &.countCardBox {
+        padding: 30px 25px;
+
+        p {
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            color: #808080;
+            margin-bottom: 12px;
+        }
+        h3 {
+            margin: 0;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 24px;
+            color: #4D4D4D;
+            line-height: 2rem;
+
+            a {
+                text-decoration: none;
+            }
+        }
+    }
 
     .tagsList {
         list-style: none;
@@ -89,7 +122,7 @@
     label {
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 14px;
         line-height: 150%;
         color: #808080;
     }
