--- a/src/pages/Todayorders/Todayorders.module.scss
+++ b/src/pages/Todayorders/Todayorders.module.scss
@@ -85,8 +85,54 @@
               justify-content: center;
               font-size: 18px;
             }
+
+            .dataList {
+                text-align: left;
+                background: #fff;
+                padding: 15px 15px;
+                box-shadow: 0px 0px 4px #0000001a;
+                border-radius: 10px;
+
+                h5 {
+                    margin-bottom: 15px;
+                }
+
+                a {
+                    color:var(--Color);
+                    text-decoration: none;
+                }
+
+                :global(.truncate) {
+                    display: block;
+                    color:#adb3bd;
+                }
+            }
+
+            .moreDropdown {
+                position: absolute;
+                right: 0;
+
+                :global(.dropdown-toggle) {
+                   background-color: transparent;
+                   color: #000;
+                   padding: 0;
+                   border:none;
+                   font-size: 24px;
+
+                   &::after {
+                    display: none;
+                   }
+                }
+            }
         }
     }
+}
+
+:global(.w-5) {
+    width: 1.25rem;
+}
+:global(.h-5) {
+    height: 1.25rem;
 }
 
 /*=======================================================
